--- a/cats.html
+++ b/cats.html
@@ -37,49 +37,49 @@
             <div class="row">
                 <div class="col-md-3 mb-4">
                     <figure class="text-center">
-                        <img src="Screenshot_20241006_150505_Instagram.jpg" class="img-fluid" alt="Bella">
+                        <img src="bella.jpg" class="img-fluid" alt="Bella">
                         <figcaption>Bella</figcaption>
                     </figure>
                 </div>
                 <div class="col-md-3 mb-4">
                     <figure class="text-center">
-                        <img src="Screenshot_20241006_151047_Facebook.jpg" class="img-fluid" alt="Onyx and Marie">
+                        <img src="onyxandmarie.jpg" class="img-fluid" alt="Onyx and Marie">
                         <figcaption>Onyx and Marie</figcaption>
                     </figure>
                 </div>
                 <div class="col-md-3 mb-4">
                     <figure class="text-center">
-                        <img src="Screenshot_20241006_150959_Facebook.jpg" class="img-fluid" alt="Alice">
+                        <img src="alice.jpg" class="img-fluid" alt="Alice">
                         <figcaption>Alice</figcaption>
                     </figure>
                 </div>
                 <div class="col-md-3 mb-4">
                     <figure class="text-center">
-                        <img src="img_20241006_150536.jpg" class="img-fluid" alt="Marie">
+                        <img src="marie.jpg" class="img-fluid" alt="Marie">
                         <figcaption>Marie</figcaption>
                     </figure>
                 </div>
                 <div class="col-md-3 mb-4">
                     <figure class="text-center">
-                        <img src="20240810_203125.jpg" class="img-fluid" alt="Millie">
+                        <img src="millie.jpg" class="img-fluid" alt="Millie">
                         <figcaption>Millie</figcaption>
                     </figure>
                 </div>
                 <div class="col-md-3 mb-4">
                     <figure class="text-center">
-                        <img src="Screenshot_20241006_150856_Facebook.jpg" class="img-fluid" alt="Marshmallow">
+                        <img src="marshmallow.jpg" class="img-fluid" alt="Marshmallow">
                         <figcaption>Marshmallow</figcaption>
                     </figure>
                 </div>
                 <div class="col-md-3 mb-4">
                     <figure class="text-center">
-                        <img src="20240530_011238.jpg" class="img-fluid" alt="Theo and Kiki">
+                        <img src="theoandkiki.jpg" class="img-fluid" alt="Theo and Kiki">
                         <figcaption>Theo and Kiki</figcaption>
                     </figure>
                 </div>
                 <div class="col-md-3 mb-4">
                     <figure class="text-center">
-                        <img src="Screenshot_20240817_224424_Instagram.jpg" class="img-fluid" alt="Salem">
+                        <img src="salem.jpg" class="img-fluid" alt="Salem">
                         <figcaption>Salem</figcaption>
                     </figure>
                 </div>
