--- a/cats.html
+++ b/cats.html
@@ -73,7 +73,7 @@
                 </div>
                 <div class="col-md-3 mb-4">
                     <figure class="text-center">
-                        <img src="theoandkiki.jpg" class="img-fluid" alt="Theo and Kiki">
+                        <img src="kikandtheo.jpg" class="img-fluid" alt="Theo and Kiki">
                         <figcaption>Theo and Kiki</figcaption>
                     </figure>
                 </div>
